fixed wrap of web address and picture of backagrounddddddddd copyright

--- a/styles/main.css
+++ b/styles/main.css
@@ -472,6 +472,16 @@ div.kiddieFrame{
   margin-top:0em;
 }
 
+a.nowrap {
+    white-space: pre-wrap; /* css-3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
+
+
 /*   03 - END Carousel/slider using plugin owl-carousel  */
 /*   04 - General Section styling */
 section h2.main-heading {
